kube/deploy-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME-deployment
spec:
  replicas: 1
  template:
    spec:
      volumes:
        - name: htpasswd
          secret:
            secretName: $SECRET_NAME
      containers:
        - name: $APP_NAME
          image: "registry.server.unknownpgr.com:443/nginx-http-basic-auth"
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: htpasswd
              readOnly: true
              mountPath: /secret
          imagePullPolicy: Always
      imagePullSecrets:
        - name: $REGISTRY_CREDIT
---
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: $APP_NAME-virtualservice
spec:
  hosts:
    - $HOST
  gateways:
    - default-gateway
  http:
    - route:
        - destination:
            host: $APP_NAME-service
            port:
              number: 80
